<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/postImageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contentImage"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/defaultimage" />

            <TextView
                android:id="@+id/postTitleList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/postTitleList"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postTextList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/postTextList"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dateText"
                android:textStyle="italic" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>