<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josevicente.firebaseblogapp.Activities.AddPostActivity">

    <RelativeLayout
        android:id="@+id/relativeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="365dp"
            android:layout_height="245dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:contentDescription="@string/contentImage"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/clickhere" />

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/postTitle"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/postTitle"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/postDescription"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:text="@string/btnPost" />

    </RelativeLayout>

</ScrollView>
